[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/spyglass (1).svg" type="Texture" id=1]
[ext_resource path="res://assets/unfriendly-fire.svg" type="Texture" id=2]
[ext_resource path="res://assets/Tiles/Terrain/Grass/grass_12.png" type="Texture" id=3]
[ext_resource path="res://assets/spiked-dragon-head.svg" type="Texture" id=4]
[ext_resource path="res://fonts/ArlonSemiBold-DEMO.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/Tile.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="Tile" type="Node2D"]
script = ExtResource( 6 )

[node name="grass_12" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -52.0
margin_top = -40.6772
margin_right = 53.0
margin_bottom = -4.67722
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="allyForces" type="Label" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.992157, 0.588235, 1 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opponentForces" type="Label" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 105.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.439216, 0.439216, 1 )
text = "5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scouting" type="Sprite" parent="."]
modulate = Color( 0.00784314, 0.160784, 0.752941, 1 )
position = Vector2( 0, -50 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="villain" type="Sprite" parent="."]
modulate = Color( 1, 0.439216, 0.439216, 1 )
position = Vector2( 42, 10 )
scale = Vector2( -0.05, 0.05 )
texture = ExtResource( 2 )

[node name="hero" type="Sprite" parent="."]
modulate = Color( 1, 0.992157, 0.588235, 1 )
position = Vector2( -42, 10 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = -57.0
margin_top = -33.0
margin_right = 57.0
margin_bottom = 34.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.3746
margin_top = 17.7221
margin_right = 59.6254
margin_bottom = 38.7221
custom_fonts/font = SubResource( 7 )
text = "PLACE NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Button" to="name" method="show"]
[connection signal="mouse_exited" from="Button" to="name" method="hide"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
